--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 
 <h1>วิชา SC362202 Mobile and web Application Development </h1>
 <ul>
-  <li>งานที่ 1</li>
-  <li>งานที่ 1</li>
-  <li>งานที่ 1</li>
+  <li><a href="./work1.html">งานที่ 1</li></a>
+  <li>งานที่ 2</li>
+  <li>งานที่ 3</li>
 
 </ul>
 <p>โดย นายภูรินทร์ สุวชาติ 663380181-3</p>
