--- a/index.html
+++ b/index.html
@@ -1,15 +1,19 @@
 <!DOCTYPE html>
-<html>
-<body>
-
-<h1>วิชา SC362202 Mobile and web Application Development </h1>
-<ul>
-  <li><a href="./work1.html">งานที่ 1</a></li>
-  <li>งานที่ 2</li>
-  <li>งานที่ 3</li>
-
-</ul>
-<p>โดย นายภูรินทร์ สุวชาติ 663380181-3</p>
-</body>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Mobile and web Application Development</title>
+  </head>
+  <body>
+    <header>
+      <h1>วิชา SC362202 Mobile and web Application Development </h1>
+    </header>
+    <ul>
+      <li><a href="work1.html">งานที่ 1</a></li>
+      <li>งานที่ 2</li>
+      <li>งานที่ 3</li>
+      <p>โดย นายภูรินทร์ สุวชาติ 663380181-3</p>
+    </ul>
+  </body>
 </html>
-
