--- a/work1.html
+++ b/work1.html
@@ -1,14 +1,19 @@
 <!DOCTYPE html>
 <html lang="th">
-<head>
-  <title>แบบทดสอบ ความรู้รอบตัว</title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script> <!-- SweetAlert -->
-  <style>
+  <head>
+    <title>แบบทดสอบ ความรู้รอบตัว</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet">
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script
+      src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <!-- SweetAlert -->
+    <style>
     body {
       font-family: 'Arial', sans-serif;
       background-color: #f4f4f9;
@@ -44,25 +49,25 @@
       color: #333;
     }
   </style>
-</head>
-<body>
+  </head>
+  <body>
 
-<div class="container-fluid p-5 bg-primary text-white text-center">
-  <h1>แบบทดสอบ ความรู้รอบตัว</h1>
-</div>
+    <div class="container-fluid p-5 bg-primary text-white text-center">
+      <h1>แบบทดสอบ ความรู้รอบตัว</h1>
+    </div>
 
-<div class="container mt-5 p-5">
-  <div class="row" id="startBox">
-    <button class="btn" id="btnStart">เริ่มทำแบบทดสอบ</button>
-  </div>
-  <div class="row" id="quizBox">
-    <div id="quizListBox"></div>
-    <button class="btn" id="btnCheckAnswer">ตรวจคำตอบ</button>
-    <div id="resultBox" class="mt-3"></div>
-  </div>
-</div>
+    <div class="container mt-5 p-5">
+      <div class="row" id="startBox">
+        <button class="btn" id="btnStart">เริ่มทำแบบทดสอบ</button>
+      </div>
+      <div class="row" id="quizBox">
+        <div id="quizListBox"></div>
+        <button class="btn" id="btnCheckAnswer">ตรวจคำตอบ</button>
+        <div id="resultBox" class="mt-3"></div>
+      </div>
+    </div>
 
-<script>
+    <script>
   $(function(){
     $("#quizBox").hide();
     $("#btnStart").click(function(){
@@ -77,7 +82,7 @@
   });
 
   function displayQuizList(){
-    $("#quizListBox").html("<div class='p-1'>ข้อสอบ</div>");
+    $("#quizListBox").html("<div class='p-1'></div>");
     for(var i in quizlist){
       displayQuiz(i,quizlist[i]);
     }
@@ -140,9 +145,8 @@
     { "title": "สัตว์ชนิดใดที่สามารถบินได้?", "options": ["ปลา", "นก", "สุนัข", "แมว"], "answer": 2 },
     { "title": "น้ำหนักของโลกมีค่าประมาณกี่กิโลกรัม?", "options": ["5.97 x 10^24 กิโลกรัม", "1.23 x 10^24 กิโลกรัม", "8.56 x 10^23 กิโลกรัม", "2.33 x 10^24 กิโลกรัม"], "answer": 1 },
     { "title": "ศูนย์กลางของระบบสุริยะคืออะไร?", "options": ["ดวงจันทร์", "ดวงอาทิตย์", "ดาวพฤหัส", "ดาวอังคาร"], "answer": 2 },
-    { "title": "ใครเป็นผู้พัฒนาทฤษฎีสัมพัทธภาพ?", "options": ["นิโคลา เทสลา", "ไอน์สไตน์", "เดมอส เดวิส", "เอิร์น ชาร์ลสตัน"], "answer": 2 }
   ];
 </script>
 
-</body>
+  </body>
 </html>
