--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </header>
     <ul>
       <li><a href="work1.html">งานที่ 1</a></li>
-      <li>งานที่ 2</li>
+      <li><a href="work2.html">งานที่ 2</a></li>
       <li>งานที่ 3</li>
       <p>โดย นายภูรินทร์ สุวชาติ 663380181-3</p>
     </ul>
