--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <ul>
       <li><a href="work1.html">งานที่ 1</a></li>
       <li><a href="work2.html">งานที่ 2</a></li>
+      <li><a href="work3.html">งานที่ 2</a></li>
+
       <li>งานที่ 3</li>
       <p>โดย นายภูรินทร์ สุวชาติ 663380181-3</p>
     </ul>
