--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       <li><a href="work1.html">งานที่ 1</a></li>
       <li><a href="work2.html">งานที่ 2</a></li>
       <li><a href="work3.html">งานที่ 3</a></li>
+      <li><a href="work4.html">งานที่ 4</a></li>
 
       <li>งานที่ 4</li>
       <p>โดย นายภูรินทร์ สุวชาติ 663380181-3</p>
