--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
       <li><a href="work3.html">งานที่ 3</a></li>
       <li><a href="work4.html">งานที่ 4</a></li>
       <li><a href="work5.html">งานที่ 5</a></li>
+      <li><a href="work6.html">งานที่ 6</a></li>
+
       <p>โดย นายภูรินทร์ สุวชาติ 663380181-3</p>
     </ul>
   </body>
